name:                  ambiata-tine
version:               0.0.1
license:               BSD3
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              Combinators for process
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           Combinators for process

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , ambiata-twine
                     , ambiata-x-eithert
                     , async                           >= 2.0        && < 2.2
                     , bytestring                      == 0.10.*
                     , conduit                         == 1.2.*
                     , conduit-extra                   == 1.1.*
                     , exceptions                      >= 0.6        && < 0.9
                     , lens                            >= 4.8        && < 4.16
                     , process                         >= 1.2        && < 1.5
                     , text                            == 1.2.*
                     , template-haskell
                     , transformers                    >= 0.3        && < 0.6
                     , time                            >= 1.4        && < 1.9
                     , unix                            == 2.7.*

  ghc-options:
                       -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -fno-warn-redundant-constraints

  hs-source-dirs:
                       src


  exposed-modules:
                       Tine.Conduit
                       Tine.Data
                       Tine.Process

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , ambiata-tine
                     , ambiata-twine
                     , ambiata-x-eithert
                     , conduit
                     , text
                     , time
                     , process
                     , QuickCheck
                     , quickcheck-instances            == 0.3.*
                     , unix

test-suite test-io
  type:                exitcode-stdio-1.0

  main-is:             test-io.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , exceptions
                     , ambiata-p
                     , ambiata-tine
                     , ambiata-twine
                     , ambiata-x-eithert
                     , conduit
                     , process
                     , text
                     , time
                     , QuickCheck
                     , quickcheck-instances            == 0.3.*
                     , unix
