name:                  tine
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              Combinators for process
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           Combinators for process

library
  build-depends:
                       base                            >= 3          && < 5
                     , bytestring                      == 0.10.*
                     , either                          == 4.3.*
                     , lens                            == 4.9.*
                     , p
                     , process                         == 1.2.*
                     , text                            == 1.2.*
                     , template-haskell
                     , transformers                    >= 0.3     && < 0.5
                     , time                            == 1.4.*
                     , twine
                     , unix                            == 2.7.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:     Tine
                       Tine.Data
                       Tine.Process

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , orphanarium-core
                     , orphanarium-corpus
                     , p
                     , text
                     , time
                     , tine
                     , twine
                     , QuickCheck
                     , quickcheck-instances            == 0.3.*
                     , unix

test-suite test-io
  type:                exitcode-stdio-1.0

  main-is:             test-io.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , exceptions
                     , orphanarium-core
                     , orphanarium-corpus
                     , p
                     , text
                     , time
                     , tine
                     , twine
                     , QuickCheck
                     , quickcheck-instances            == 0.3.*
                     , unix
