name:                  ambiata-tine
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              Combinators for process
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           Combinators for process

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , ambiata-twine
                     , bytestring                      == 0.10.*
                     , lens                            >= 4.8        && < 4.10
                     , process                         == 1.2.*
                     , text                            == 1.2.*
                     , template-haskell
                     , transformers                    >= 0.3        && < 0.5
                     , time                            == 1.4.*
                     , unix                            == 2.7.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:     Tine
                       Tine.Data
                       Tine.Process

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , ambiata-tine
                     , ambiata-twine
                     , text
                     , time
                     , QuickCheck
                     , quickcheck-instances            == 0.3.*
                     , unix

test-suite test-io
  type:                exitcode-stdio-1.0

  main-is:             test-io.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , exceptions
                     , ambiata-p
                     , ambiata-tine
                     , ambiata-twine
                     , text
                     , time
                     , QuickCheck
                     , quickcheck-instances            == 0.3.*
                     , unix
